--- a/style.css
+++ b/style.css
@@ -1,21 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap');
-
-* {
+*{
     box-sizing: border-box;
     margin: 0;
     padding: 0;
     font-size: 20px;
 }
 
-:root {
+:root{
     --colorfather: yellow;
-    --colorson: black;
+    --colorson: black; 
     --font1: 20px;
     --fontfamily: 'Open sans';
 }
 
-li,
-a {
+li, a {
     font-family: var(--fontfamily);
     font-weight: 500;
     font-size: 16px;
@@ -25,76 +23,83 @@ a {
 
 }
 
-header {
+header{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0px 3%;
+    padding:  0px 3%;
 }
 
-.logo {
+.logo{
     cursor: pointer;
     width: 300px;
-
+    
 }
 
-.nav__links {
+.nav__links{ 
     list-style: none;
 }
 
-.nav__links li {
+.nav__links li { 
     display: inline-block;
     padding: 0px 20px;
 
 }
 
-.nav__links li a {
-    transition: all 0.3s ease 0s;
+.nav__links li a { 
+ transition: all 0.3s ease 0s;
 }
 
-.nav__links li a:hover {
+.nav__links li a:hover{
     transition: all 0.3s ease 0s;
-    color: var(--colorfather);
+color: var(--colorfather);
 
 }
 
-.bienvenida {
+.bienvenida{
     display: grid;
     justify-content: center;
 
 }
 
-h1 {
+h1{ 
     font-size: 60px;
     margin-top: 80px;
 }
 
-.nombre {
-    margin-top: 20px;
+.nombre{
+margin-top: 20px;
 }
 
-.nombre {
+.nombre{
     box-shadow: 3px 4px 0px 0px #899599;
-    background: linear-gradient(to bottom, #ededed 5%, #bab1ba 100%);
-    background-color: #ededed;
-    border-radius: 15px;
-    border: 1px solid #d6bcd6;
-    display: inline-block;
-    cursor: pointer;
-    color: #3a8a9e;
-    font-family: Times New Roman;
-    font-size: 22px;
-    padding: 7px 25px;
-    text-decoration: none;
-    text-shadow: 0px 1px 0px #e6d300;
+	background:linear-gradient(to bottom, #ededed 5%, #bab1ba 100%);
+	background-color:#ededed;
+	border-radius:15px;
+	border:1px solid #d6bcd6;
+	display: grid;
+    justify-content: center;
+	cursor:pointer;
+	color: #8f8f8f;
+	font-family: var(--fontfamily);
+	font-size:22px;
+	padding: 7px 100px;
+	text-decoration:none;
 }
 
-.nombre:hover {
-    background: linear-gradient(to bottom, #bab1ba 5%, #ededed 100%);
-    background-color: #bab1ba;
+.nombre:hover{
+    background:linear-gradient(to bottom, #bab1ba 5%, #ededed 100%);
+	background-color: var(--colorfather);
+    
 }
 
-.nombre:active {
-    position: relative;
-    top: 1px;
+.nombre:active{
+    position:relative;
+	top:1px;
+}
+
+.gif{
+    display: grid;
+    justify-content: center;
+    margin-top: 30px;
 }
