--- a/style.css
+++ b/style.css
@@ -159,6 +159,26 @@ margin-left: 10px;
 
 }
 
+.btn-historia{
+    margin-top: 50px;
+    font-size: 20px;
+    background-color: rgb(7, 7, 7);
+    color: white;
+    border-radius: 0.5rem;
+    padding: 2px 5px;
+    
+}
+
+.btn-historia:hover{
+    border-radius: 2rem;
+    transition: all 0.3s ease 0s;
+    color: rgb(0, 0, 0);
+    background-color: var(--colorfather);
+    text-shadow:  1.5px 1.5px rgba(251, 248, 28, 0.774);
+    border-radius: 0.5rem;
+    
+
+}
 .btn-title{
     font-size: 30px;
     display: grid;
@@ -167,4 +187,8 @@ margin-left: 10px;
 
 .color-titlebtn{
     color: yellow;
+}
+
+.comenzar{
+    background-color: yellow;
 }
